--- a/Projet Septembre/WebContent/header.html
+++ b/Projet Septembre/WebContent/header.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="header">
-		<a href="Home.jsp"><img src="images/Simplon-logo-simplon.co_.png" width=12% height=90%></a>
+		<a href="Home.jsp">Accueil</a>
 		<ul class="hul">
 			<li><a href="subscribe.jsp">Inscription/</a></li>
 			<li><a href="Sign_in">Connexion</a></li>
