--- a/Projet Septembre/WebContent/header3.html
+++ b/Projet Septembre/WebContent/header3.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1">
 <link rel="stylesheet" type="text/css" href="style/Style.css">
-<title>Header</title>
+<title>Header-Conn/Inscr</title>
 </head>
 <body>
 	<div class="header">
