Added a lot of CSS

--- a/Projet Septembre/WebContent/footer.html
+++ b/Projet Septembre/WebContent/footer.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="footer">
 		<ul class="ful">
-			<li><a href="">Contactez-nous</a></li>
+			<li><a href="emailClient.jsp">Contactez-nous</a></li>
 			<li><a href="">Mentions légales</a></li>
 		</ul>
 	</div>
