--- a/Projet Septembre/WebContent/header3.html
+++ b/Projet Septembre/WebContent/header3.html
@@ -10,25 +10,53 @@
 <title>Header-Conn/Inscr</title>
 </head>
 <body>
-	<div class="container">
+
+	<div class="container header">
 		<div class="row justify-content-md-center">
 			<div class="col">
-				<a href="Home.jsp" class="btn btn-primary">Accueil</a>
+				<img src="images/LogoMakr_15OHZR.png" class="logo">
 			</div>
-			<div class="col-7">
-				<div class="row justify-content-md-center">
-					<div class="col"></div>
-					<div class="col-12">
-						<img src="images/LogoMakr_15OHZR.png" class="logo">
-					</div>
-					<div class="col"></div>
+		</div>
+		<div class="row justify-content-md-center">
+			<div class="col">
+				<div class="bandeau">
+					<table>
+						<tr>
+							<td><h1>Vous cherchez un événement?</h1></td>
+						</tr>
+						<tr>
+							<td><form action="pageEvenementSearch.jsp" name="searchBar">
+									<div class="form-row">
+										<div class="col">
+											<input type="text" class="search-bar1" name="eventName"
+												placeholder="Evenement..">
+										</div>
+										<div class="col">
+											<select name="categorie" class="search-bar">
+												<option></option>
+												<option>Atelier Coworking</option>
+												<option>Hackathon</option>
+											</select>
+											<div class="input-group-append">
+												<button class="btn btn-outline-secondary" type="submit">TROUVER</button>
+											</div>
+										</div>
+									</div>
+								</form></td>
+						</tr>
+					</table>
 				</div>
 			</div>
+		</div>
+		<div class="row justify-content-md-center navBar">
 			<div class="col">
-				
+				<a href="Home.jsp" id="accueil" class="bigLink">ACCUEIL</a>
+			</div>
+			<div class="col">
+				<a href="pageEvenement.jsp" class="bigLink">EVENEMENTS</a>
+			</div>
+			<div class="col">
 			</div>
 		</div>
 	</div>
-
-</body>
 </html>
